Fix logo on small screens

--- a/css/site.scss
+++ b/css/site.scss
@@ -157,6 +157,14 @@ h6 {
     }
 }
 
+@media(max-width: 320px) {
+    .navbar-brand {
+        img {
+            max-width: 230px;
+        }
+    }
+}
+
 footer {
     padding: 50px 0;
     background-color: #f8f8f8;
